--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,14 +21,16 @@ h1 {
     width: 120%;
 }
 
-#button {
-    margin-top: 5%;
+button {
     width: 120%;
+    padding: 10px;
+    margin-top: 5%;
     color: white;
     background-color: #3f6fc9;
+    border-radius: 5px 5px 5px 5px;
 }
 
-#button:hover {
+button:hover {
     color: black;
     background-color: #114fc2;
 }
